# sharedvar

./: .clangd  .gitignore  ARCHITECTURE.md  ARCHITECTURE_EN.md  ARCHITECTURE_NL.md  ATLProjectcomserver.def  ATLProjectcomserver.idl  ATLProjectcomserver.rc  ATLProjectcomserver.rgs  ATLProjectcomserver.sln  ATLProjectcomserver.vcxproj  ATLProjectcomserver_h.h  ATLProjectcomserver_i.c  ATLProjectcomserver_i.h  ATLProjectcomserver_p.c  CHANGELOG.md  CHANGELOG_EN.md  CHANGELOG_NL.md  CMakeLists.txt  ComErrorHelper.h  DatasetProxy.h  DatasetProxy.rgs  INSTALL.md  MathOperations.cpp  MathOperations.h  MathOperations.rgs  NoMermaid.txt  README.md  README_EN.md  README_NL.md  SharedValue.cpp  SharedValue.h  SharedValue.rgs  SharedValueCallback.h  SharedValueCallback.rgs  dlldata.c  dllmain.cpp  dllmain.h  midl_compile.cmd  pch.cpp  (+4 more)
.github/workflows/: release.yml
ATLProjectcomserverExe/: .clangd  ARCHITECTURE.md  ARCHITECTURE_NL.md  ATLProjectcomserver.def  ATLProjectcomserver.idl  ATLProjectcomserver.sln  ATLProjectcomserver.vcxproj  ATLProjectcomserver_i.c  ATLProjectcomserver_i.h  ATLProjectcomserver_p.c  DatasetProxy.cpp  DatasetProxy.rgs  INSTALL.md  INSTALL_EN.md  MathOperations.h  MathOperations.rgs  README.md  README_EN.md  README_NL.md  SharedValue.cpp  SharedValue.h  SharedValue.rgs  SharedValueCallback.rgs  USAGE_EXAMPLES.md  USAGE_EXAMPLES_NL.md  dlldata.c  dllmain.cpp  dllmain.h  pch.cpp  pch.h  stop_server.cpp  stop_server.vbs  targetver.h
ATLProjectcomserverExe/tests/: README.md  Run-CrossProcessTests.ps1
ATLProjectcomserverLegacy/: ATLProjectcomserver.idl  ATLProjectcomserver.rc  ATLProjectcomserver.vcxproj  MathOperations.cpp  MathOperations.rgs  README.md  SharedValue.rgs  SharedValueCallback.cpp  SharedValueCallback.h  SharedValueCallback.rgs  dllmain.cpp  dllmain.h
ConsoleTest/: ConsoleTest.cpp
SharedValueInstaller/: Package.wxs  SharedValueInstaller.wixproj
SharedValueV2/: ARCHITECTURE.md  ARCHITECTURE_NL.md  CMakeLists.txt  CODE_REFERENCE.md  README.md  README_EN.md
SharedValueV2/include/: DatasetObserver.hpp  DatasetStore.hpp  Errors.hpp  README.md  SharedValue.hpp  StorageEngine.hpp
SharedValueV2/tests/: README.md  StressTest.cpp  UnitTests.cpp
SharedValueV3_MemMap/: ARCHITECTURE.md  CODE_REFERENCE.md  CODE_REFERENCE_NL.md  INSTALL.md  README.md  README_EN.md  build_schema.ps1  schema.fbs
SharedValueV3_MemMap/cpp_core/: .clangd  CMakeLists.txt  SharedValueEngine.hpp  dataset_generated.h  main.cpp
SharedValueV3_MemMap/cpp_core/SharedMemMap/: DataRow.cs  NestedDetails.cs
SharedValueV3_MemMap/csharp_core/: Program.cs  SharedValueEngine.cs  SharedValueEngineExceptions.cs  csharp_core.csproj
SharedValueV3_MemMap/tests/: README.md  README_NL.md  Run-MemMapTests.ps1
SharedValueV4/: ARCHITECTURE.md  ARCHITECTURE_NL.md  INSTALL.md  README.md  README_NL.md  SCHEMA_HANDLEIDING_NL.md  USAGE_NL.md
SharedValueV4/cpp_core/: .clangd  CMakeLists.txt  main.cpp
SharedValueV4/csharp_core/: Program.cs  SharedValueEngine.cs  csharp_core.csproj  csharp_out.txt
SharedValueV4/schema/: dataset.fbs
SharedValueV4/tests/: README_EN.md  Run-MemMapTests.ps1
SharedValueV5/: ARCHITECTURE.md  ARCHITECTURE_NL.md  README.md  README_NL.md
SharedValueV5/com_wrapper/: SharedValueV5Com.cs  com_wrapper.csproj
SharedValueV5/cpp_core/: BinarySerializer.hpp  CMakeLists.txt  ColumnDefinition.hpp  SharedDataSet.hpp  SharedValueEngine.hpp  SharedValueV5Engine.hpp  main.cpp
SharedValueV5/csharp_core/: BinarySerializer.cs  ColumnDefinition.cs  Program.cs  SharedDataSet.cs  SharedRow.cs  SharedTable.cs  SharedValueEngine.cs  SharedValueEngineExceptions.cs  SharedValueV5Engine.cs  csharp_core.csproj
SharedValueV5/examples/: python_reader.py  vbs_consumer.vbs
SharedValueV5/python_ext/: generate_clangd.ps1  pyproject.toml  setup.py
SharedValueV5/python_ext/src/: main.cpp
SharedValueV5/tests/: Run-V5Tests.ps1  consumer_output.txt  cross_cons.txt  cross_prod.txt  producer_output.txt  solo_out.txt
SharedValueV5Installer/: Components.wxs  Package.wxs  SharedValueV5Installer.wixproj  build_sdk_installer.ps1
docs/: 3_methods_for_inteprocess.md  README.md  README_EN.md  implementation_plan_python_module.md  implementation_plan_sdk_installer.md  research_memmap_v3_disadvantages_mitigations.md  research_memmap_v3_disadvantages_mitigations_EN.md  research_memory_mapped_files_sharedvar_new_design.md  research_memory_mapped_files_sharedvar_new_design_EN.md
docs/research/: csharp_com_vbs_dataset_implementation_plan.md  research_2.md
docs/v4/: implementation_plan_NL.md  walkthrough_NL.md
docs/v5/: implementatieplan_NL.md  implementation_planv2.md
scripts/: Invoke-ComDiagnostics.ps1  README.md
src/: main.cpp
tests/: README.md
tests/CSharpNet8Test/: Program.cs  README.md
tests/VBScriptTest/: README.md  README_NL.md  TestConsumerString.vbs  TestConsumerVBS.vbs  TestErrorHandling.vbs  (+5 more)
(+28 files in other folders)
